[package]
name = "retry-cli"
version = "0.2.4"
license = "MIT"
edition = "2021"

[[bin]]
name = "retry"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
futures = "0.3"
humantime = "2.1"
libc = "0.2"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
